--- a/ui/package.json
+++ b/ui/package.json
@@ -29,7 +29,7 @@
     "nuxt-clipboard2": "^0.2.1",
     "ol": "^6.1.1",
     "vue-line-clamp": "^1.3.2",
-    "vuelayers": "^0.11.17"
+    "vuelayers": "0.11.17"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
