Prevent workflow from running on master for forks

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,10 @@
+---
+workflow:
+  rules:
+    - if: '$CI_COMMIT_REF_NAME == "master" && $CI_PROJECT_NAMESPACE != "open-reviews"'
+      when: never
+    - when: always
+
 stages:
   - build
   - test
