--- a/servers/reviewer/docker-compose.yml
+++ b/servers/reviewer/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.0'
 services:
   # builds lambda package
   build:
-    image: plantingspace/lambda-rust
+    image: quay.io/open-reviews/lambda-rust
     volumes:
     - .:/code
     - ~/.cargo/registry:/root/.cargo/registry
