--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "anchor-js": "^4.2.2",
+    "axios-rate-limit": "^1.3.0",
     "base64-url": "^2.3.3",
     "blueimp-canvas-to-blob": "^3.18.0",
     "blueimp-load-image": "^2.28.0",
